@@ -63,3 +63,4 @@
 ( cvs diff -u -r 1.1.2.15 -r 1.1.2.16 src/vcal_prefs.c;  ) > 1.91.0cvs5.patchset
 ( cvs diff -u -r 1.2.2.50 -r 1.2.2.51 src/vcal_folder.c;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/vcal_folder.h;  cvs diff -u -r 1.1.2.47 -r 1.1.2.48 src/vcal_manager.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/vcal_manager.h;  cvs diff -u -r 1.1.2.46 -r 1.1.2.47 src/vcal_meeting_gtk.c;  cvs diff -u -r 1.2.2.44 -r 1.2.2.45 src/vcalendar.c;  ) > 1.91.0cvs6.patchset
 ( cvs diff -u -r 1.2.2.51 -r 1.2.2.52 src/vcal_folder.c;  cvs diff -u -r 1.1.2.48 -r 1.1.2.49 src/vcal_manager.c;  cvs diff -u -r 1.2.2.45 -r 1.2.2.46 src/vcalendar.c;  ) > 1.91.0cvs7.patchset
+( cvs diff -u -r 1.1.2.47 -r 1.1.2.48 src/vcal_meeting_gtk.c;  ) > 1.91.0cvs8.patchset
